20110330
	call strtol not atoi for hex numbers [issue 255, mechiel]
20110329
	utils/mkdir/mkdir.c - add -p option [mechiel, issue 250]
	emu/Linux/mkfile - try searching -lpthread after -lrt for sem_* [issue 247]
	emu/port/devfs-posix.c - treat unix domain sockets as files (open/read/write/close) [npe, rsc, issue 254]
	emu/port/devfs-posix.c - use volatile correctly; slight code tidy
	emu/lib9/errstr-posix.c replace EINTR's error string by Eintr's text
20110315
	libtk/textw.c - fix mysterious control characters for editing (D and K) [issue 253, fix from mechiel]
20110225
	split emu.h from lib9.h for all platforms
	kproc in emu is now a void type as in os
20110224
	move private mem flag to Progs [issue 240, mechiel]
20110224
20110208
	emu/Linux/os.c - use -lrt's semaphores instead of signals
	emu/Linux/mkfile - add -lrt to library list, and push out separation of X11LIBS from SYSLIBS for emu-g done ages ago
20110126
	emu/MacOSX/os.c - move a free to a more sensible place
20110117
	emu/Nt/ipif.c changed to work with ipv6 interface changes
20110116
	add Plan9/arm support [provided by richard miller]
20110110	
	utils/libmach/qdb.c [issue 245] restore renaming of qdiv as qmuldiv
20110104
	emu/MacOSX/win.c detect double clicks [issue 232, jas]
	emu/MacOSX/os.c replace erendezvous by a per-kproc semaphore for osblock/osready
20101220
	changes to srv(3) to notify client when server vanishes [issue 244, thanks to powerman and roger]
20101205
	change a few types in ipif-posix.c to appease the gods
	emu/MacOSX/mkfile - include portmkfile at correct point for LIBFILES to work (and other, minor, changes) [issue 24]
20101127
	emu/port/*ip*.[ch] and emu/Nt/ipif*.c updated with new interface for ipv6 support [mechiel] [issue 193]
	emu/Linux/os.c address compilation warnings (setfcr etc still to do)
20101125
	asm/assem.c don't attempt to use missing src (issue 243)
20100925
	appl/lib/w3c/uris.b - handle existing Unicode characters if they happen not to have been encoded into string